fix overlap text

--- a/docs/style.css
+++ b/docs/style.css
@@ -33,7 +33,6 @@ nav ul li p {
 
 ul {
   list-style: none;
-  height: 0px;
   margin: 0px;
 }
 
